Add scarf & update README with instructions
& Update simplecore-ui to 0.0.9. Use color override for input

--- a/projects/example-app/src/app/app.component.html
+++ b/projects/example-app/src/app/app.component.html
@@ -6,8 +6,8 @@
       <button coreButton routerLink="scroll-to-section">Scroll To Section</button>
     </div>
     <div>
-      <a href=""><span>GitHub</span></a>
-      <a href=""><span>NPM</span></a>
+      <a href="https://github.com/officialsimplecore/angular-scroll-animations"><span>GitHub</span></a>
+      <a href="https://www.npmjs.com/package/angular-scroll-animations"><span>NPM</span></a>
       <a href="https://simplecore.org"><span>Creator</span></a>
     </div>
   </nav>
